[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0", default-features = false }
pebbles-game-io = { path = "io" }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
rand_chacha = { version = "0.3", default-features = false }

[build-dependencies]
pebbles-game-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
pebbles-game-io = { path = "io" }
bytecheck = "0.6.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
region = "3.0"
