[package]
name = "pebbles-game-io"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
rkyv = "0.7.44"
bytecheck = "0.6.12"
rkyv_dyn = "0.7.44"